# F-Run

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.github/: copilot-instructions.md
src/: main.rs
src/config/: configurer.rs  features.rs  frunconfig.rs  mod.rs
src/core/: exit_codes.rs  macros.rs  mod.rs  pubspec.rs  runner.rs  settings.rs
src/core/menu/: generators_menu.rs  main_menu.rs  menu_theme.rs  menus.rs  mod.rs
src/core/menu/searchable_menu/: error.rs  menu.rs  mod.rs  render.rs  terminal.rs
src/core/utils/: android_artifacts.rs  command_availability.rs  dependency_checks.rs  filesystem.rs  mod.rs
src/features/: fastlane.rs  flavors.rs  flutter.rs  generators.rs  installer.rs  mod.rs  shorebird.rs
src/features/analyze/: analysis.rs  category_state.rs  mod.rs  package_analysis.rs
src/features/localization/: katana.rs  localize.rs  mod.rs
src/ui/: colors.rs  menu_runner.rs  mod.rs  printer.rs  tui.rs
