[package]
name = "f-run"
version = "1.0.0+2026042900"
edition = "2024"

[dependencies]
comfy-table = { version = "7.2.1", default-features = false }
crossterm = "0.29.0"
figlet-rs = "0.1.5"
glob = "0.3.3"
once_cell = "1.21.3"
rand = "0.10.0"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
regex-lite = "0.1.8"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
time = { version = "0.3.47" , features = ["macros", "local-offset", "formatting"]}
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 2
strip = "symbols"
panic = "abort"
debug = false
incremental = false

[profile.release.build-override]
opt-level = "z"
codegen-units = 2

[profile.release.package."*"]
opt-level = "z"
codegen-units = 2